test/types/sync/vass/ref-sync-2.good
ref-sync-2.chpl:17: warning: fun1 sync
ref-sync-2.chpl:18: warning: fun2 sync
ref-sync-2.chpl:20: error: done
